@startuml searchUser
hide circle
skinparam classAttributeIconSize 0
class UsersController {
    +Search(): IActionResult
}

class ApplicationDbContext {
    +ApplicationUsers: DbSet<ApplicationUser>
    #OnConfiguring(DbContextOptionsBuilder optionsBuilder): void
}


class SendFriendRequestDTO {
    +ReceiverId: string
    +Content: string
}

class ApplicationUser {
    +Name: string
    +AvatarUrl: string
    +BackgroundUrl: string
    +Introduction: string
    +Dob: DateTime
    +Gender: string
    +Active: bool
}

class IdentityUser {
    + IdentityUser(string userName) 
}

UsersController "1" o--"1" ApplicationDbContext
UsersController "1"--"1" SendFriendRequestDTO
ApplicationDbContext "*" o--"1" ApplicationUser
ApplicationUser --|> IdentityUser
@enduml